# reverse_diagrams

./: .gitignore  .pre-commit-config.yaml  AMBIGUOUS_FLAG_FIX.md  CHANGELOG.md  CLEANUP_AND_PUSH_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  NESTED_OU_BUG_FIX.md  ORGANIZATIONS_WATCH_IMPLEMENTATION.md  PHASE_2_3_COMPLETION_SUMMARY.md  PLUGIN_MIGRATION_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  TAG_FILTERING_SPEC_COMPLETE.md  VERSION_2.1.1_RELEASE_SUMMARY.md  VERSION_2.2.0_RELEASE_SUMMARY.md  improvements_analysis.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
.kiro/specs/html-report-generation/: design.md  requirements.md  tasks.md
.kiro/specs/interactive-identity-center-explorer/: design.md  requirements.md  tasks.md
.kiro/specs/tag-based-filtering/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: config.py  models.py  organizations_mapper.py  reponses.txt  reverse_diagrams.py  version.py
src/aws/: client_manager.py  describe_identity_store.py  describe_organization.py  describe_sso.py  exceptions.py
src/banner/: banner.py
src/dgms/: graph.py  graph_mapper.py  graph_template.py  test.py
src/diagrams/: graph_mapper.py  graph_org.py  graph_sso.py  graph_template.py  test.py
src/explorer/: __init__.py  controller.py  data_loader.py  display.py  models.py  navigation.py
src/export_report/: export_csv.py
src/plugins/: __init__.py  base.py  registry.py
src/plugins/builtin/: __init__.py  ec2_plugin.py  identity_center_plugin.py  organizations_plugin.py
src/reports/: console_view.py  html_report.py  save_results.py
src/utils/: __init__.py  cache.py  concurrent.py  progress.py
tests/: __init__.py  conftest.py
tests/fixtures/: account_assignments_valid.json  groups_valid.json  organizations_malformed.json  organizations_valid.json
tests/integration/: __init__.py  test_cli_integration.py  test_explorer_integration.py  test_html_combined_generation.py  test_html_custom_paths.py  test_html_standalone_generation.py  test_html_watch_integration.py
tests/unit/: test_client_manager.py  test_controller_unit.py  test_display_properties.py  test_display_unit.py  test_explorer_data_loader_properties.py  test_explorer_data_loader_unit.py  test_explorer_models_properties.py  test_html_cli_args.py  test_html_cli_integration_properties.py  test_html_error_handling.py  test_html_progress_feedback.py  test_html_report_properties.py  test_html_watch_command_properties.py  test_html_watch_command_unit.py  test_models.py  test_navigation_properties.py  test_navigation_unit.py  test_nested_ou_generation.py  test_organizations_console_view.py
