[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"

[project]
name = "reverse_diagrams"
version = "0.1.8"
authors = [
    { name = "Alejandro Velez", email = "wilmar.velezl@sophossolutions.com" },
]
description = "Continuous Documentation Tool - Documentation as Code Tool - \n This package create reverse diagrams  based on your current state in your cloud environment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=3.2.0",
    "diagrams>= 0.22.0",
    "colorama>=0.4.4",
    "boto3>=1.26.44"


]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/velez94/reverse_diagrams"
"Bug Tracker" = "https://github.com/velez94/reverse_diagrams/issues"

[project.scripts]
reverse_diagrams = "src.reverse_diagrams:main"