[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reverse_diagrams"
version = "1.2.0"
authors = [
    { name = "Alejandro Velez", email = "avelez@labvel.io" },
]
description = "Continuous Documentation Tool - Documentation as Code Tool - \n This package create reverse diagrams  based on your current state in your cloud environment using diagrams library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "rich>=13.7.0",
    "diagrams>= 0.23.4",
    "colorama>=0.4.4",
    "boto3>=1.26.44",
    "emoji>=2.2.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/velez94/reverse_diagrams"
"Bug Tracker" = "https://github.com/velez94/reverse_diagrams/issues"

[project.scripts]
reverse_diagrams = "src.reverse_diagrams:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
